# homework-OAuth2.0

./: pyproject.toml
config/: settings.py  urls.py
oauthapp/: apps.py  urls.py  views.py
oauthapp/templates/: profile.html
