[tool.poetry]
name = "homework-oauth2-0"
version = "0.1.0"
description = ""
authors = ["frutez <glebka.yatsenko@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_oauth2"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
social-auth-app-django = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
